# awaitify

./: .travis.yml  CMakeLists.txt  Readme.md
cmake/: configure_compiler.cmake
cmake/compiler/: enable_cxx14.cmake  gcc.cmake  msvc.cmake
cmake/platform/: unix.cmake  windows.cmake
dep/: configure_dependencies.cmake
dep/boost/: configure_boost.cmake
include/awaitify/: awaitify.hpp
src/: awaitify.cpp
tests/: tests.cpp
